fixing copyright being covered by tool bar

--- a/src/template/style.css
+++ b/src/template/style.css
@@ -392,6 +392,7 @@ body {
 @media (max-width: 400px) {
     body {
         background-attachment: scroll;
+        height: -webkit-fill-available;
     }
 }
 
